--- a/.env-template
+++ b/.env-template
@@ -2,3 +2,5 @@ SPOTIFY_ID=SUPER_SECRET_STUFF
 SPOTIFY_SECRET=SUPER_SECRET_STUFF
 JWT_SIGNING_KEY=SUPER_SECRET_STUFF
 TOKEN_STATE=SUPER_SECRET_STUFF
+GOOGLE_CLIENT_ID=SUPER_SECRET_STUFF
+GOOGLE_CLIENT_SECRET=SUPER_SECRET_STUFF
