chore(env): Update .env.example and .gitignore; add agent development guide and PRD

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-SPOTIFY_ID=SUPER_SECRET_STUFF
-SPOTIFY_SECRET=SUPER_SECRET_STUFF
-JWT_SIGNING_KEY=SUPER_SECRET_STUFF
-TOKEN_STATE=SUPER_SECRET_STUFF
-GOOGLE_CLIENT_ID=SUPER_SECRET_STUFF
-GOOGLE_CLIENT_SECRET=SUPER_SECRET_STUFF
+SPOTIFY_ID
+SPOTIFY_SECRET
+GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET
