--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ client_secret.json
 ytmusic_get_playlistItem_response_sample.json
 ytmusic_get_user_playlist_response_sample.json
 .DS_Store
+sample/
