RFC-002 have been completed successfully.
Integrate PocketBase foundation and migration framework

- Updated `go.mod` and `go.sum` to include PocketBase and its dependencies.
- Created `pb_data/` directory for runtime data and updated `.gitignore`.
- Established `pb_migrations/` directory with initial migration for settings collection.
- Modified `main.go` to initialize PocketBase and register migration commands.
- Enhanced Makefile with new targets for development and migration.
- Verified functionality of backend development server and migration processes.
- Updated README with comprehensive PocketBase development instructions.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ ytmusic_get_playlistItem_response_sample.json
 ytmusic_get_user_playlist_response_sample.json
 .DS_Store
 sample/
+backend/pb_data/
+backend/tmp/
