--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.0",
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-router": "^1.120.18",
     "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
     "zod": "^3.25.56"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4.1.8",
+    "@tanstack/router-plugin": "^1.120.18",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/eslint__js": "^8.42.3",
@@ -37,6 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "jsdom": "^26.1.0",
+    "msw": "^2.10.1",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.8",
