--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
+    "generate-routes": "npx @tanstack/router-cli generate",
     "test": "vitest",
     "test:run": "vitest run",
     "test:e2e": "playwright test",
@@ -19,6 +20,7 @@
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-router": "^1.120.18",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.513.0",
     "pocketbase": "^0.26.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -31,9 +33,11 @@
     "@tailwindcss/postcss": "^4.1.8",
     "@tanstack/react-query-devtools": "^5.80.6",
     "@tanstack/react-router-devtools": "^1.120.18",
+    "@tanstack/router-cli": "^1.120.19",
     "@tanstack/router-plugin": "^1.120.18",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.15.30",
     "@types/react": "^19.1.2",
