--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@eslint/js": "^9.28.0",
     "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query-devtools": "^5.80.6",
     "@tanstack/react-router-devtools": "^1.120.18",
     "@tanstack/router-cli": "^1.120.19",
