Fixing oauth and view playlist issues
Enhance OAuth Integration and Frontend Routing for Spotify

- Added a new `FRONTEND_URL` environment variable to support frontend redirection during OAuth flows, improving flexibility in development environments.
- Implemented `SaveTokenWithScopes` function to persist OAuth tokens along with their associated scopes, enhancing token management for Spotify and Google.
- Updated existing OAuth handlers to utilize the new token saving functionality, ensuring that scopes are correctly stored.
- Introduced a new route for Spotify settings in the frontend, allowing users to manage their Spotify playlists more effectively.
- Enhanced error handling and logging in OAuth processes to provide better insights during authentication flows.

These changes significantly improve the OAuth integration and user experience for managing Spotify connections. However, further testing may be required to ensure all edge cases are handled effectively, particularly in the new routing and token management functionalities.

--- a/backend/env.example
+++ b/backend/env.example
@@ -12,6 +12,7 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 
 # Server Configuration
 PUBLIC_URL=http://127.0.0.1:8090
+FRONTEND_URL=http://localhost:5173
 PORT=8090
 
 # Logging Level (optional)
