**L5**  -  **L6** Implement activity logs page with filtering and sync item details modal
- Added a new route at `/logs` to display activity logs, including filtering options for log levels and job types.
- Integrated a modal to show detailed information about sync items when clicking on log messages with associated `sync_item_id`.
- Updated the API to fetch activity logs and sync item details, ensuring proper error handling and loading states.
- Created comprehensive tests for the activity logs page, including rendering, filtering, and modal functionality.

These changes enhance the observability of system activities and provide users with a detailed view of sync job executions. However, further testing may be necessary to validate all edge cases and ensure data accuracy.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^5.1.0",
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-router": "^1.120.18",
+    "@tanstack/react-table": "^8.21.3",
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
     "pocketbase": "^0.26.1",
